增加本地小说校验